2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs, XmlAttributeCollectionTests.cs
	  XmlElementTests.cs, XmlCharacterDataTests.cs :
	  Marked NotDotNet for some tests broken under 2.0 (MS bugs).
	  Marked Ignore for some tests which originally does not make sense.
	  Changed types in ExpectedException for some tests under 2.0.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAssert.cs : new file.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : enabled MoveToNextSibling() tests.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added several tests for 2.0 methods.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReaderTests.cs : added test for Encoding property.

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added tests for ReadToDescendant() and
	  ReadToFollowing().

2005-12-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettingsTests.cs : added some ConformanceLevel tests.
	  Added CreateClonesSettings() to make sure XmlReader.Create() clones
	  XmlReaderSettings.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettingsTests.cs : (DefaultValue)
	  Added assertion label everywhere.
	* XmlWriterTests.cs : WriteNodeError is broken under MS.NET 2.0 (it
	  should cause an error).

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettingsTests.cs : SetSchemas() should not cause an error.
	  Added SetSchemasNull() as well.
	* XmlUrlResolverTests.cs : (ResolveUriWithNullArgs)
	  expect ArgumentNullException instead of ArgumentException.
	  This is a fix in .NET 2.0.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XsdParticleValidationTests.cs : ValidateRootElementOnlyInvalid()
	  does not throw validation exception under MS 2.0, this NotDotNet.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : use ProhibitDtd=false in CreateSimple()